# python-package-exercise-project-3-team-14

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
example/: example.py
src/dailydose/: __main__.py  battleship.py  fact.py  hang.py  news.py  wisdom.py
src/dailydose/data/: fun_fact.json
tests/: test_battleship.py  test_fact.py  test_hangman.py  test_news.py  test_wisdom.py
