[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dailydose"
description = "A package that gives you your daily dose of fun!"
version = "0.0.2"
authors = [
  { name="Larry Li", email="zl2902@nyu.edu" },
  { name="Sneheel Sarangi", email="ss14247@nyu.edu" },
  { name="Paula Seraphim", email="pas580@nyu.edu" },
  { name="Winston Zhang", email="shz231@nyu.edu" },
]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"
keywords = ["dailydose"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-14"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-14.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-14/issues"

[project.scripts]
wisdom = "wisdom.__main__:main"
